fixing headlines and some spacing for css mastery

--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,21 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 3rem;
-  line-height: 4.5rem;
+  font-size: 4rem;
+  line-height: 6rem;
 }
 
 h2 {
-  font-size: 2.7rem;
+  font-size: 3rem;
   line-height: 3.2rem;
+  padding: 10px 0px;
+
 }
 
 h3 {
   font-size: 2rem;
   line-height: 2.7rem;
+  padding-bottom: 10px;
 }
 
 h4 {
@@ -41,7 +44,10 @@ h4 {
 
 .byline, figcaption {
   font-family: Arial, Helvetica, sans-serif;
+}
 
+.byline {
+  font-size: 12px;
 }
 
 span{
